kubernetes/network-platform/network-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: network-ui
  namespace: network-platform
  labels:
    app: network-ui

spec:
  type: ClusterIP

  selector:
    app: network-ui

  ports:
    - name: http
      port: 80
      targetPort: http
